--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="animation.css">
     <link href="https://fonts.googleapis.com/css2?family=Changa&family=Indie+Flower&family=Poppins:wght@100;500&family=Ropa+Sans&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/f762207ca5.js" crossorigin="anonymous"></script>
@@ -46,15 +46,72 @@
             <h5>Categories:</h5>
         </div>
         <div class="d-flex justify-content-center">
-            <div class="dropdown-center">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownCenterBtn" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="dropdown-center dropdown-mega position-static">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownCenterBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
                     Choose category here..
                 </button>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownCenterBtn">
-                    <li><a class="dropdown-item active" href="#" aria-current="true">Artist</a></li>
-                    <li><a class="dropdown-item" href="#">Action two</a></li>
-                    <li><a class="dropdown-item" href="#">Action three</a></li>
-                </ul>
+                <div class="dropdown-menu shadow dropdown-menu-dark">
+                    <div class="mega-content px-sm-3">
+                        <div class="container-fluid">
+                            <div class="d-flex justify-content-center">
+                                <div class="row">
+                                    <div class="col-md px-md-5 py-md-3 py-2">
+                                        <h5>Genres</h5>
+                                        <hr size="4" style="opacity: 50%;" width="100%" color="white">
+                                        <div class="list-group-dark">
+                                            <a href="" class="list-group-item">Pop</a>
+                                            <a href="" class="list-group-item">Rock</a>
+                                            <a href="" class="list-group-item">Reggae</a>
+                                            <a href="" class="list-group-item">Jazz</a>
+                                            <a href="" class="list-group-item">Hip hop</a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md px-md-5 py-md-3 py-4">
+                                        <h5>Language</h5>
+                                        <hr size="4" style="opacity: 50%;" width="100%" color="white">
+                                        <div class="list-group-dark">
+                                            <a href="" class="list-group-item">English</a>
+                                            <a href="" class="list-group-item">Indonesian</a>
+                                            <a href="" class="list-group-item">Japanese</a>
+                                            <a href="" class="list-group-item">Korean</a>
+                                            <a href="" class="list-group-item">Arabian</a>
+                                        </div>
+                                        
+                                    </div>
+                                    <div class="col-md px-md-5 py-md-3 py-2">
+                                        <h5>General</h5>
+                                        <hr size="4" style="opacity: 50%;" width="100%" color="white">
+                                        <div class="list-group-dark">
+                                            <a href="" class="list-group-item">Artist</a>
+                                            <a href="" class="list-group-item">Studio</a>
+                                            <a href="" class="list-group-item">Reggae</a>
+                                            <a href="" class="list-group-item">Jazz</a>
+                                            <a href="" class="list-group-item">Hip hop</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center mt-3">
+                                <div class="row">
+                                    <div class="col">
+                                        <i class="fa-solid fa-headphones"></i>
+                                        <i class="fa-solid fa-plus mx-1" style="font-size: 10px;"></i>
+                                        <i class="fa-solid fa-music"></i>
+                                        <i class="fa-solid fa-equals mx-1" style="font-size: 10px;"></i>
+                                        <i class="fa-solid fa-heart" style="color: red;"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center mb-1">
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="text-light" style="font-family: 'Indie Flower', cursive;">Healing yourself with music</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="d-flex justify-content-start mt-4">
@@ -300,27 +357,19 @@
                 </div>
             </div>
         </div>
-
-        <!-- <h1 style="font-family: 'Shadows Into Light', cursive; color: white;">MUSICA</h1>
-        <p style="color: #f3f2ed; font-family: 'Indie Flower', cursive;">Hello dunia selamat malam minggu</p>
-        <button onclick="getData()">GEGEH</button>
-        <div id="dataNamaArtis"></div>
-        <div id="dataNamaArtisSia"></div>
-        <div id="arrayNamaArtisSia"></div> -->
     </div>
-    
     <footer class="">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,64L60,64C120,64,240,64,360,80C480,96,600,128,720,122.7C840,117,960,75,1080,53.3C1200,32,1320,32,1380,32L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
         <div class="bg-dark pb-5">
             <div class="container">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="row row-cols-1 row-cols-lg-3 g-4">
                     <div class="col d-flex align-items-center">
                         <div class="row">
                             <a href="#" style="text-decoration: none; font-family: 'Shadows Into Light', cursive; color: white; font-size: 33px;">falendwa MUSICA</a>
                             <p class="text-light" style="font-family: 'Indie Flower', cursive;">Healing yourself with music</p>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-center">
+                    <div class="col">
                         <div class="row">
                             <p class="fs-5 text-light">Contact</p>
                             <a href="" class="text-light mb-3" style="text-decoration: none;"><i class="fa-solid fa-envelope me-2"></i>moh.falendwandamen_1313618027@mhs.unj.ac.id</a>
@@ -329,7 +378,7 @@
                             <a href="" class="text-light" style="text-decoration: none;"><i class="fa-brands fa-instagram me-2"></i>@falendwa</a>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-center flex-row-reverse">
+                    <div class="col">
                         <div class="row">
                             <p class="fs-5 text-light">Location</p>
                             <a href="" class="text-light mb-3" style="text-decoration: none;"><i class="fa-solid fa-location-dot me-2"></i>Jakarta, Indonesia</a>
